--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "點點簽",
+  "name": "THE F2E 點點簽",
   "icons": [
     {
       "src": "favicon.ico",
