--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "f2e-signature",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://peiyu0725.github.io/f2e-signature/",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "deploy": "node ./ghpages.js"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -10,6 +16,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "fabric": "^5.2.4",
+    "jspdf": "^2.5.1",
     "pdfjs-dist": "^3.0.279",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,12 +26,6 @@
   },
   "devDependencies": {
     "sass": "^1.56.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
