--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "fabric": "^5.2.4",
+    "gh-pages": "^4.0.0",
     "jspdf": "^2.5.1",
     "pdfjs-dist": "^3.0.279",
     "react": "^18.2.0",
